@@ -1,5 +1,6 @@
 1.3 beta 1
 - Intensive code refactoring and cleanup
+- Improve rendering of short notes in tablature view
 
 ===================================================================================================
 
